<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button.</string>
    <string name="Login">Login</string>
    <string name="Login_name">login name</string>
    <string name="Password">Password</string>
    <string name="password_hint">your password</string>
    <string name="Switch">What does this do?</string>
    <string name="Radio">Radio Button!</string>
    <string name="Checkbox">Checkbox Button!</string>
    <string name="title_activity_list_items">List Items Activity</string>
    <string name="camera_description">camera</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="home_button">Home</string>
    <string name="item_list_button">Item List</string>
    <string name="captured_image">Captured Image</string>
    <string name="button_ok">Yes</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_dialog_message">Are you sure? This will send you back to the Main Activity</string>
    <string name="button_dialog_title">You have clicked a button!</string>
    <string name="start_chat_button">Start Chat</string>
    <string name="send_button">Send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="title_folders">Folders</string>
    <string name="title_trash">Trash</string>
    <string name="title_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fab_description">idk</string>
    <string name="folder">Folder</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="about">about</string>
    <string name="testToolbar">Test Toolbar</string>
    <string name="dialog_title">Do you want to go back?</string>
    <string name="dialog_positive">Yes!</string>
    <string name="dialog_negative">No</string>
    <string name="custom_dialog_hint">New Message</string>
</resources>