<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login" />

    <EditText
        android:id="@+id/LoginEmail"
        android:textColorHint="@color/black"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:autofillHints="emailAddress"
        android:hint="@string/Login_name"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColorHint="@color/black" />

    <com.google.android.material.button.MaterialButton
        style="@style/CommonButtonStyle"
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/login_button"        />

    <com.google.android.material.button.MaterialButton
        style="@style/CommonButtonStyle"
        android:id="@+id/buttonTestToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/testToolbar" />


</LinearLayout>