<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListItemsActivity"
    android:layout_margin="2dp"
    android:background="@color/white"
    android:columnCount="2"
    android:rowCount="4"
    android:layout_columnWeight="1">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/Radio"
        android:layout_gravity="fill|center"
        />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/Checkbox"
        android:layout_gravity="fill|center"
        />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/Switch"
        android:layout_gravity="center|top"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal|center|top"
        android:contentDescription="@string/camera_description"
        android:src="@android:drawable/ic_menu_camera" />

    <ImageView
        android:id="@+id/capturedImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:contentDescription="@string/captured_image"
        android:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        style="@style/CommonButtonStyle"
        android:id="@+id/buttonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="center|bottom|right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />

    <com.google.android.material.button.MaterialButton
        style="@style/CommonButtonStyle"
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_button"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center|bottom|left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />
</GridLayout>